details/navbar.css
/* ... */
.align-self-center {
    align-self: center!important
}

  /* 기본설정 끝 */
   /*이미지 크기 */
nav img {
    height: 3.5rem !important
}
nav img, nav svg {
    vertical-align: middle
}
fa-icon svg {
    display: inline-block;
    font-size: inherit;
    height: 1em
}

/* 네비게이션 바 */
.navbar {
    --bs-navbar-padding-x: 0;
    --bs-navbar-padding-y: .5rem;
    --bs-navbar-color: rgba(0, 0, 0, .55);
    --bs-navbar-hover-color: rgba(0, 0, 0, .7);
    --bs-navbar-disabled-color: rgba(0, 0, 0, .3);
    --bs-navbar-active-color: rgba(0, 0, 0, .9);
    --bs-navbar-brand-padding-y: .3125rem;
    --bs-navbar-brand-margin-end: 1rem;
    --bs-navbar-brand-font-size: 1.25rem;
    --bs-navbar-brand-color: rgba(0, 0, 0, .9);
    --bs-navbar-brand-hover-color: rgba(0, 0, 0, .9);
    --bs-navbar-nav-link-padding-x: .5rem;
    --bs-navbar-toggler-padding-y: .25rem;
    --bs-navbar-toggler-padding-x: .75rem;
    --bs-navbar-toggler-font-size: 1.25rem;
    --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
    --bs-navbar-toggler-border-color: rgba(0, 0, 0, .1);
    --bs-navbar-toggler-border-radius: .35rem;
    --bs-navbar-toggler-focus-width: .2rem;
    --bs-navbar-toggler-transition: box-shadow .15s ease-in-out;
    position: relative;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    padding: var(--bs-navbar-padding-y) var(--bs-navbar-padding-x)
}
.navbar-nav {
    --bs-nav-link-padding-x: 0;
    --bs-nav-link-padding-y: .5rem;
    --bs-nav-link-font-weight: ;
    --bs-nav-link-color: var(--bs-navbar-color);
    --bs-nav-link-hover-color: var(--bs-navbar-hover-color);
    --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
    display: flex;
    flex-direction: column;
    padding-left: 0;
    margin-bottom: 0;
    list-style: none;
}
.bg-white {
    --bs-bg-opacity: 1;
    background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity)) !important;
}
.navbar-marketing.fixed-top, .nav-fixed .navbar-marketing.topnav, .nav-fixed #layoutSidenav .navbar-marketing#layoutSidenav_nav {
    max-height: 100vh;
    overflow-y: auto;
}
.navbar-marketing {
    padding-top: .9375rem;
    padding-bottom: .9375rem;
}
.shadow {
    box-shadow: 0 .15rem 1.75rem #21283226 !important;
}
.fixed-top, .nav-fixed #layoutSidenav #layoutSidenav_nav, .nav-fixed .topnav {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1030;
}

/* 컨테이너 */
.navbar>.nav-container, .navbar>.nav-container-fluid, .navbar>.nav-container-xl {
    display: flex;
    flex-wrap: inherit;
    align-items: center;
    justify-content: space-between;
}

.nav-container, .nav-container-fluid, .nav-container-xl {
    --bs-gutter-x: 1.5rem;
    --bs-gutter-y: 0;
    width: 100%;
    padding-right: calc(var(--bs-gutter-x)* .5);
    padding-left: calc(var(--bs-gutter-x)* .5);
    margin-right: auto;
    margin-left: auto;
}
/* 컨테이너 */

/* 로고 */
.text-black {
    --bs-text-opacity: 1;
    color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
}
a {
    text-decoration: none;
}
.ms-2 {
    margin-left: .5rem !important;
}

.navbar-brand {
    font-size: 1.2rem;
    font-weight: 600;
    padding-top: var(--bs-navbar-brand-padding-y);
    padding-bottom: var(--bs-navbar-brand-padding-y);
    margin-right: var(--bs-navbar-brand-margin-end);
    white-space: nowrap;
}
.navbar-toggler {
    padding: var(--bs-navbar-toggler-padding-y) var(--bs-navbar-toggler-padding-x);
    font-size: var(--bs-navbar-toggler-font-size);
    line-height: 1;
    color: var(--bs-navbar-color);
    background-color: transparent;
    border: var(--bs-border-width) solid var(--bs-navbar-toggler-border-color);
    border-radius: var(--bs-navbar-toggler-border-radius);
    transition: var(--bs-navbar-toggler-transition);
}
.navbar-toggler:focus {
    text-decoration: none;
    outline: 0;
    box-shadow: 0 0 0 var(--bs-navbar-toggler-focus-width);
}
/*작을때 펼치기 버튼*/
.navbar-marketing .navbar-toggler {
    padding: .5rem;
    border: 0;
}


/*작을때 펼치기 버튼 끝*/




/* 헤더 */
.navbar-collapse {
    flex-basis: 100%;
    flex-grow: 1;
    align-items: center;
}
.me-auto {
    margin-right: auto !important;
}

/* 헤더끝 */



/* 내비게이션 바 요소들들 */
.navbar-marketing .navbar-nav .nav-item .nav-link {
    font-weight: 500;
}
.navbar-marketing .navbar-nav {
    padding-top: 1.75rem;
    padding-bottom: 1.75rem;
}
.navbar-light .navbar-nav .nav-link {
    color: #69707a !important;
}
.navbar-marketing .nav-link {
    font-size: .9rem;
    width: 100%;
}
.pointer {
    cursor: pointer !important;
}
.nav-link {
    display: block;
    padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
    font-size: var(--bs-nav-link-font-size);
    font-weight: var(--bs-nav-link-font-weight);
    color: var(--bs-nav-link-color);
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
}
.dropdown .dropdown-toggle .dropdown-arrow {
    margin-left: .4rem;
    margin-right: 0;
    transition: transform .1s ease-in-out;
    font-size: .6em;
}
/* 요소 끝 */
/* 오른쪽 요소들 */
.nav-right {
    padding-top: 0;
    padding-bottom: 1.75rem;
}
/* 로그인 버튼 */
.navbar .btn {
    display: inline-flex;
    align-items: center;
    line-height: 1;
    height: 2.2rem;
    font-size: .75rem;
    padding: 0 1rem;
    font-weight: 600;
    text-transform: none;
    letter-spacing: normal;
}
button:not(:disabled), [type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled) {
    cursor: pointer;
}
.mb-3 {
    margin-bottom: 1rem !important;
}
/* ... */

